--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<strong>Apad 4.x</strong>
 			</div>
 			<div class="form-row">
-			  <label><input class="checkbox" type="checkbox" value="Asus Transformer Pad TF103CG **x86** (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Asus Transformer Pad TF103CG **x86** (4.4.2)</span></label></div>
+			  <label><input class="checkbox" type="checkbox" value="Asus Transformer Pad TF103CG **x86** (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Asus Transformer Pad TF103CG x86 (4.4.2)</span></label></div>
 			<div class="form-row">
 			  <label><input class="checkbox" type="checkbox" value="Digma Optima Prime 3G (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Digma Optima Prime 3G (4.4.2)</span></label></div>
 			<div class="form-row">
@@ -191,12 +191,16 @@
 	                                  theArray[theArray.length] = $(box).val();
 	                              }
 	                          }
+														$('.button').css('background-color', '#FFE973');
 	                          showValues(theArray);
 	                      });
 
 	                      var showValues = function (array) {
 	                          var text = "";
-	                          if (array.length == 0) text += "Ни один чекбокс не выбран";
+	                          if (array.length == 0){
+															text += "Ни один чекбокс не выбран";
+															$('.button').css('background-color', '#f2f2f2');
+														}
 	                          for (var i = 0; i < array.length; i++) {
 	                              text += "* " + array[i] + " <br />";
 	                          }
