commit: add favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	</script>
 	<script src="src/salvattore.min.js">
 	</script>
+	<link rel="shortcut icon" href="src/favicon.png" type="image/png">
 </head>
 <body>
 	<div class="form-row form-row-title">
