Yandex-styled header.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 	<nav class="navbar">
-		<p class="navbar-logo">
+		<div class="navbar-logo">
 				Devices
-		</p>
+		</div>
 	</nav>
 	<div data-columns="" id="grid">
 		<div class="column size-1of2">
