New header style, Yndx-sans and new footer.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<nav class="navbar">
 		<div class="navbar-logo">
-				Devices
+				Устройства
 		</div>
 	</nav>
 	<div data-columns="" id="grid">
@@ -164,14 +164,14 @@
 			  <label><input class="checkbox" type="checkbox" value="Xiaomi Mi5 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi5 (6.0.1)</span></label></div>
 			</div>
 	</div>
-		<div class="form-row form-row-title">
+	<div class="footer">
+		<div class="footer-text">
 			<strong>Вывод списка девайсов:</strong>
 		</div>
-	<nav class="navbar">
 		<div  class="values" id="bar">
 			Ни один чекбокс не выбран
 		</div>
-	</nav>
+	</div>
 	<!-- Target
 	<textarea  class="values"  id="bar">Mussum ipsum cacilds...</textarea> -->
 
