--- a/index.html
+++ b/index.html
@@ -157,9 +157,13 @@
 			<div class="form-row">
 			  <label><input class="checkbox" type="checkbox" value="Huawei Nexus 6P (7.1.1)"> <span class="checkbox-custom"></span> <span class="label">Huawei Nexus 6P (7.1.1)</span></label></div>
 			<div class="form-row">
+			  <label><input class="checkbox" type="checkbox" value="LG G5 SE H845 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">LG G5 SE H845 (6.0.1)</span></label></div>
+			<div class="form-row">
 			  <label><input class="checkbox" type="checkbox" value="Samsung Galaxy S7 SM-G930 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy S7 SM-G930 (7.0)</span></label></div>
 			<div class="form-row">
 			  <label><input class="checkbox" type="checkbox" value="Sony Xperia Z2 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Z2 (6.0.1)</span></label></div>
+			<div class="form-row">
+			  <label><input class="checkbox" type="checkbox" value="Sony Xperia XZ F8332  (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia XZ F8332  (7.0)</span></label></div>
 			<div class="form-row">
 			  <label><input class="checkbox" type="checkbox" value="Xiaomi Mi5 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi5 (6.0.1)</span></label></div>
 			</div>
