--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="form-row">
 			  <label><input class="checkbox" type="checkbox" value="Asus Nexus 7  (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Asus Nexus 7  (5.1.1)</span></label></div>
 			<div class="form-row">
-			  <label><input class="checkbox" type="checkbox" value="Asus ZenPad 10 Z300CG x86 (5.0.2)"> <span class="checkbox-custom"></span> <span class="label">Asus ZenPad 10 Z300CG **x86** (5.0.2)</span></label></div>
+			  <label><input class="checkbox" type="checkbox" value="Asus ZenPad 10 Z300CG x86 (5.0.2)"> <span class="checkbox-custom"></span> <span class="label">Asus ZenPad 10 Z300CG x86 (5.0.2)</span></label></div>
 			<div class="form-row">
 			  <label><input class="checkbox" type="checkbox" value="Digma Hit LTE (5.1)"> <span class="checkbox-custom"></span> <span class="label">Digma Hit LTE (5.1)</span></label></div>
 			<div class="form-row">
