add url for ios and nav button

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 		<div class="navbar-logo">
 				Устройства
 		</div>
-		<!-- <div class="navbar-logo-android">
+		<div class="navbar-logo-android">
 				Android
 		</div>
 		<div class="navbar-logo-ios">
 				<a href="index.html">iOS</a>
-		</div> -->
+		</div>
 	</nav>
 	<div data-columns="" id="grid">
 		<div class="column size-1of2">
