--- a/index.html
+++ b/index.html
@@ -88,12 +88,15 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Xiaomi MiPad 2 x86 (5.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi MiPad 2 x86 (5.1)</span></label></div>
 			<div class="form-row form-row-title">
-				<strong>Apad 6+</strong>
+				<strong>Apad 6.x</strong>
+			</div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab S2 SM-T719 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab S2 SM-T719 (6.0.1)</span></label></div>
+			<div class="form-row form-row-title">
+				<strong>Apad 7.x</strong>
 			</div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="HTC Nexus 9 LTE (7.1)"> <span class="checkbox-custom"></span> <span class="label">HTC Nexus 9 LTE (7.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab S2 SM-T719 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab S2 SM-T719 (6.0.1)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Tablet Z4 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Tablet Z4 (7.0)</span></label></div>
 		</div>
@@ -157,28 +160,32 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Xiaomi Redmi 3 (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Redmi 3 (5.1.1)</span></label></div>
 			<div class="form-row form-row-title">
-				<strong>Aphone 6+</strong>
+				<strong>Aphone 6.x</strong>
 			</div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Asus Zenfone 2 x86 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Asus Zenfone 2 x86 (6.0.1)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="HTC One M9 (6.0)"> <span class="checkbox-custom"></span> <span class="label">HTC One M9 (6.0)</span></label></div>
 			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Huawei Nexus 6P (7.1.1)"> <span class="checkbox-custom"></span> <span class="label">Huawei Nexus 6P (7.1.1)</span></label></div>
-			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="LG G5 SE H845 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">LG G5 SE H845 (6.0.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="LG Nexus 5X (7.1.2)"> <span class="checkbox-custom"></span> <span class="label">LG Nexus 5X (7.1.2)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S5 mini (6.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S5 mini (6.0)</span></label></div>
 			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy S7 SM-G930 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy S7 SM-G930 (7.0)</span></label></div>
-			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Z2 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Z2 (6.0.1)</span></label></div>
 			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Sony Xperia XZ F8332  (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia XZ F8332  (7.0)</span></label></div>
-			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Xiaomi Mi5 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi5 (6.0.1)</span></label></div>
+			<div class="form-row form-row-title">
+				<strong>Aphone 7.x</strong>
+			</div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Huawei Nexus 6P (7.1.1)"> <span class="checkbox-custom"></span> <span class="label">Huawei Nexus 6P (7.1.1)</span></label></div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="LG Nexus 5X (7.1.2)"> <span class="checkbox-custom"></span> <span class="label">LG Nexus 5X (7.1.2)</span></label></div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy S7 SM-G930 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy S7 SM-G930 (7.0)</span></label></div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Sony Xperia XZ F8332  (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia XZ F8332  (7.0)</span></label></div>
+
 		</div>
 	</div>
 	<div class="footer">
