--- a/index.html
+++ b/index.html
@@ -4,23 +4,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>Выбор девайсов для ленивых</title>
-<<<<<<< HEAD
 	<link href="css/style.css" rel="stylesheet">
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/clipboard.min.js"></script>
-	<script src="js/salvattore.min.js"></script>
-=======
-	<link href="src/style.css" rel="stylesheet">
-	<script src="src/jquery-3.1.1.min.js">
+	<script src="js/jquery-3.2.1.min.js">
 
 	</script>
-	<script src="src/clipboard.min.js">
+	<script src="js/clipboard.min.js">
 
 	</script>
-	<script src="src/salvattore.min.js">
+	<script src="js/salvattore.min.js">
 
 	</script>
->>>>>>> 80245b02c77dedf9f90503f1eeff616eff2d3c6b
 	<link rel="shortcut icon" href="src/favicon.ico" type="image/png">
 </head>
 
@@ -29,10 +22,10 @@
 		<div class="navbar-logo">
 			Устройства
 		</div>
-		<div class="navbar-logo-android">
-			<a href="random.html">Random</a>
+		<!-- <div class="navbar-logo-android">
+				Android
 		</div>
-		<!-- <div class="navbar-logo-ios">
+		<div class="navbar-logo-ios">
 				<a href="index.html">iOS</a>
 		</div> -->
 	</nav>
@@ -42,42 +35,6 @@
 				<strong>Apad 4.x</strong>
 			</div>
 			<div class="form-row">
-<<<<<<< HEAD
-				<label><input class="checkbox" type="checkbox" value="Asus Transformer Pad TF103CG **x86** (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Asus Transformer Pad TF103CG x86 (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Digma Optima Prime 3G (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Digma Optima Prime 3G (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Huawei MediaPad 7 Lite (4.0.3)"> <span class="checkbox-custom"></span> <span class="label">Huawei MediaPad 7 Lite (4.0.3)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="IRBIS TX22 (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">IRBIS TX22 (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Lenovo TAB 2 A10-70 (4.4.4)"> <span class="checkbox-custom"></span> <span class="label">Lenovo TAB 2 A10-70 (4.4.4)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Lenovo TAB 2 A7-30DC (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Lenovo TAB 2 A7-30DC (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="LG G Pad V490 (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">LG G Pad V490 (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Motorola XOOM (4.1.2)"> <span class="checkbox-custom"></span> <span class="label">Motorola XOOM (4.1.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="OYSTERS T72ER (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">OYSTERS T72ER (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Prestigio MultiPad Wize 3087 3G (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Prestigio MultiPad Wize 3087 3G (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Note (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Note (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY Tab 2 3G (GT-P3100) (4.2.2)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY Tab 2 3G (GT-P3100) (4.2.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab 3 GT-P5200 x86 (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab 3 GT-P5200 x86 (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab 3 SM-T310 (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab 3 SM-T310 (4.4.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab 4 (SM-T231)  (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab 4 (SM-T231)  (4.4.2)</span></label></div>
-			<div class="form-row form-row-title">
-				<strong>Apad 5.x</strong>
-			</div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Asus Nexus 7  (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Asus Nexus 7  (5.1.1)</span></label></div>
-=======
 				<label><input class="checkbox" type="checkbox" value="Asus Nexus 7  (4.4.4)"> <span class="checkbox-custom"></span> <span class="label">Asus Nexus 7  (4.4.4)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Asus Transformer Pad TF103CG **x86** (4.4.2)"> <span class="checkbox-custom"></span> <span class="label">Asus Transformer Pad TF103CG x86 (4.4.2)</span></label></div>
@@ -112,7 +69,6 @@
 			<div class="form-row form-row-title">
 				<strong>Apad 5.x</strong>
 			</div>
->>>>>>> 80245b02c77dedf9f90503f1eeff616eff2d3c6b
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Asus ZenPad 10 Z300CG x86 (5.0.2)"> <span class="checkbox-custom"></span> <span class="label">Asus ZenPad 10 Z300CG x86 (5.0.2)</span></label></div>
 			<div class="form-row">
@@ -132,16 +88,6 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Xiaomi MiPad 2 x86 (5.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi MiPad 2 x86 (5.1)</span></label></div>
 			<div class="form-row form-row-title">
-<<<<<<< HEAD
-				<strong>Apad 6+</strong>
-			</div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="HTC Nexus 9 LTE (7.1)"> <span class="checkbox-custom"></span> <span class="label">HTC Nexus 9 LTE (7.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab S2 SM-T719 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab S2 SM-T719 (6.0.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Sony Xperia Tablet Z4 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Tablet Z4 (6.0.1)</span></label></div>
-=======
 				<strong>Apad 6.x</strong>
 			</div>
 			<div class="form-row">
@@ -153,7 +99,6 @@
 				<label><input class="checkbox" type="checkbox" value="HTC Nexus 9 LTE (7.1)"> <span class="checkbox-custom"></span> <span class="label">HTC Nexus 9 LTE (7.1)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Tablet Z4 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Tablet Z4 (7.0)</span></label></div>
->>>>>>> 80245b02c77dedf9f90503f1eeff616eff2d3c6b
 		</div>
 		<div class="column size-1of2">
 			<div class="form-row form-row-title">
@@ -199,36 +144,6 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Asus ZenFone 2 x86 (5.0)"> <span class="checkbox-custom"></span> <span class="label">Asus ZenFone 2 x86 (5.0)</span></label></div>
 			<div class="form-row">
-<<<<<<< HEAD
-				<label><input class="checkbox" type="checkbox" value="Asus Zenfone 2 ZE551ML x86 (5.0)"> <span class="checkbox-custom"></span> <span class="label">Asus Zenfone 2 ZE551ML x86 (5.0)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="FLY Cirrus 2 FS504 (5.1)"> <span class="checkbox-custom"></span> <span class="label">FLY Cirrus 2 FS504 (5.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Huawei MediaPad X2 (5.0)"> <span class="checkbox-custom"></span> <span class="label">Huawei MediaPad X2 (5.0)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="LG D855 G3 (5.0)"> <span class="checkbox-custom"></span> <span class="label">LG D855 G3 (5.0)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Meizu M2 Mini (5.1)"> <span class="checkbox-custom"></span> <span class="label">Meizu M2 Mini (5.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="MEIZU M3 NOTE (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">MEIZU M3 NOTE (5.1.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Grand Prime Duos (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Grand Prime Duos (5.1.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S5 mini (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S5 mini (5.1.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Xiaomi MI 4c (5.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi MI 4c (5.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Xiaomi Redmi 3 (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Redmi 3 (5.1.1)</span></label></div>
-			<div class="form-row form-row-title">
-				<strong>Aphone 6+</strong>
-			</div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="HTC One M9 (6.0)"> <span class="checkbox-custom"></span> <span class="label">HTC One M9 (6.0)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Huawei Nexus 6P (7.1.1)"> <span class="checkbox-custom"></span> <span class="label">Huawei Nexus 6P (7.1.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="LG G5 SE H845 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">LG G5 SE H845 (6.0.1)</span></label></div>
-=======
 				<label><input class="checkbox" type="checkbox" value="FLY Cirrus 2 FS504 (5.1)"> <span class="checkbox-custom"></span> <span class="label">FLY Cirrus 2 FS504 (5.1)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Huawei MediaPad X2 (5.0)"> <span class="checkbox-custom"></span> <span class="label">Huawei MediaPad X2 (5.0)</span></label></div>
@@ -257,22 +172,12 @@
 				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S5 mini (6.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S5 mini (6.0)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Z2 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Z2 (6.0.1)</span></label></div>
->>>>>>> 80245b02c77dedf9f90503f1eeff616eff2d3c6b
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Xiaomi Mi5 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi5 (6.0.1)</span></label></div>
 			<div class="form-row form-row-title">
 				<strong>Aphone 7.x</strong>
 			</div>
 			<div class="form-row">
-<<<<<<< HEAD
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy S7 SM-G930 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy S7 SM-G930 (7.0)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Sony Xperia Z2 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Z2 (6.0.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Sony Xperia XZ F8332  (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia XZ F8332  (7.0)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Xiaomi Mi5 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi5 (6.0.1)</span></label></div>
-=======
 				<label><input class="checkbox" type="checkbox" value="Huawei Nexus 6P (7.1.1)"> <span class="checkbox-custom"></span> <span class="label">Huawei Nexus 6P (7.1.1)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="LG Nexus 5X (7.1.2)"> <span class="checkbox-custom"></span> <span class="label">LG Nexus 5X (7.1.2)</span></label></div>
@@ -281,7 +186,6 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia XZ F8332  (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia XZ F8332  (7.0)</span></label></div>
 
->>>>>>> 80245b02c77dedf9f90503f1eeff616eff2d3c6b
 		</div>
 	</div>
 	<div class="footer">
@@ -304,7 +208,6 @@
 	</button>
 	<script type="text/javascript">
 		var clipboard = new Clipboard('.button');
-<<<<<<< HEAD
 
 		var boxes = $("input:checkbox");
 		$("input:checkbox").on("change", function () {
@@ -319,22 +222,6 @@
 			showValues(theArray);
 		});
 
-=======
-
-		var boxes = $("input:checkbox");
-		$("input:checkbox").on("change", function () {
-			var theArray = new Array();
-			for (var i = 0; i < boxes.length; i++) {
-				var box = boxes[i];
-				if ($(box).prop('checked')) {
-					theArray[theArray.length] = $(box).val();
-				}
-			}
-			$('#text-copy').css('background-color', '#ffdb4d');
-			showValues(theArray);
-		});
-
->>>>>>> 80245b02c77dedf9f90503f1eeff616eff2d3c6b
 		var showValues = function (array) {
 			var text = "";
 			if (array.length == 0) {
