--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 		<div class="navbar-logo">
 			Устройства
 		</div>
-		<!-- <div class="navbar-logo-android">
+		<div class="navbar-logo-devices">
+				<a href="random.html">Random</a>
+		</div>
+		<!--<div class="navbar-logo-android">
 				Android
 		</div>
 		<div class="navbar-logo-ios">
