--- a/random.html
+++ b/random.html
@@ -16,7 +16,7 @@
         <h1>[Alpha] Randomization set of devices</h1>
     </header>-->
     <div class="firstHeader">
-        <h1>Randome Device List</h1>
+        <h1>[Beta] Randome Device List</h1>
     </div>
     <article>
         <p class="arrows">
@@ -46,7 +46,7 @@
         </form>
     </article>
     <div class="firstHeader">
-        <h1>Device List</h1>
+        <h1>[Device List] Choose devices that would exclude them from randomization:</h1>
     </div>
     <article>
         <!--<p class="arrows">
