--- a/random.html
+++ b/random.html
@@ -8,7 +8,7 @@
     <link href="css/random.css" rel="stylesheet">
     <script src="js/random.js"></script>
     <!--<script src="js/script.js"></script>-->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
