--- a/random.html
+++ b/random.html
@@ -46,7 +46,7 @@
         </form>
     </article>
     <div class="firstHeader">
-        <h1>[Device List] Choose devices that would exclude them from randomization:</h1>
+        <h1>[Device List] Выберите девайсы, что бы исключить их из рандомизации:</h1>
     </div>
     <article>
         <!--<p class="arrows">
