--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
 	<meta charset="utf-8">
 	<title>Выбор девайсов для ленивых</title>
 	<link href="css/style.css" rel="stylesheet">
-	<script src="js/jquery-3.2.1.min.js">
-
-	</script>
-	<script src="js/clipboard.min.js">
-
-	</script>
-	<script src="js/salvattore.min.js">
-
-	</script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/clipboard.min.js"></script>
+	<script src="js/salvattore.min.js"></script>
 	<link rel="shortcut icon" href="src/favicon.ico" type="image/png">
 </head>
 
