--- a/devices.html
+++ b/devices.html
@@ -34,7 +34,7 @@
                 <a href="#" id="next" class="btn close" onclick="clearCheckBox()"><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>-->
             </header>
             <div class="arrows">
-                <a href="#" class="btn checked" data-clipboard-action="copy" data-clipboard-target="#bar" id="text-copy"><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>
+                <a href="#" class="btn checked" data-clipboard-action="copy" data-clipboard-target="#bar" id="text-copy" style="right:7em;"><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>
                 <a href="#" id="next" class="btn close" onclick="clearCheckBox()"><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>
             </div>
             <!-- id="prev"  -->
