--- a/devices.html
+++ b/devices.html
@@ -29,7 +29,7 @@
         <section>
 
             <header>
-                <h2>[Device List] Выберите девайсы:</h2>
+                <h2>Выберите девайсы для копирования в буфер обмена:</h2>
                 <!--                <a href="#" class="btn play" data-clipboard-action="copy" data-clipboard-target="#bar" id="text-copy"><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>
                 <a href="#" id="next" class="btn close" onclick="clearCheckBox()"><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>-->
             </header>
@@ -88,7 +88,7 @@
 
             <!-- Вывод списка девайсов -->
             <header>
-                <h2>[Device List] Выберите девайсы:</h2>
+                <h2>Список выбранных девайсов:</h2>
             </header>
 
             <article>
