--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
 				<label><input class="checkbox" type="checkbox" value="Xiaomi MiPad 2 x86 (5.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi MiPad 2 x86 (5.1)</span></label></div>
 			<div class="form-row form-row-title">
 				<strong>Apad 6.x</strong>
-			</div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab S2 SM-T719 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab S2 SM-T719 (6.0.1)</span></label></div>
+			</div>		
 			<div class="form-row form-row-title">
 				<strong>Apad 7.x</strong>
 			</div>
 			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="HTC Nexus 9 LTE (7.1)"> <span class="checkbox-custom"></span> <span class="label">HTC Nexus 9 LTE (7.1)</span></label></div>
+				<label><input class="checkbox" type="checkbox" value="HTC Nexus 9 LTE (7.1.1)"> <span class="checkbox-custom"></span> <span class="label">HTC Nexus 9 LTE (7.1.1)</span></label></div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab S2 SM-T719 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab S2 SM-T719 (7.0)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Tablet Z4 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Tablet Z4 (7.0)</span></label></div>
 		</div>
@@ -177,12 +177,14 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Huawei Nexus 6P (7.1.2)"> <span class="checkbox-custom"></span> <span class="label">Huawei Nexus 6P (7.1.2)</span></label></div>
 			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="LG Nexus 5X (7.1.2)"> <span class="checkbox-custom"></span> <span class="label">LG Nexus 5X (7.1.2)</span></label></div>
-			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy S7 SM-G930 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy S7 SM-G930 (7.0)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia XZ F8332  (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia XZ F8332  (7.0)</span></label></div>
-
+			<div class="form-row form-row-title">
+				<strong>Aphone 8.x</strong>
+			</div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="LG Nexus 5X (8.0)"> <span class="checkbox-custom"></span> <span class="label">LG Nexus 5X (8.0)</span></label></div>
 		</div>
 	</div>
 	<div class="footer">
