--- a/index.html
+++ b/index.html
@@ -169,15 +169,15 @@
 				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S5 mini (6.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S5 mini (6.0)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Z2 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Z2 (6.0.1)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Xiaomi Mi5 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi5 (6.0.1)</span></label></div>
+			<!--<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Xiaomi Mi5 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi5 (6.0.1)</span></label></div> -->
 			<div class="form-row form-row-title">
 				<strong>Aphone 7.x</strong>
 			</div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Huawei Nexus 6P (7.1.2)"> <span class="checkbox-custom"></span> <span class="label">Huawei Nexus 6P (7.1.2)</span></label></div>
-			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy S7 SM-G930 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy S7 SM-G930 (7.0)</span></label></div>
+			<!--<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy S7 SM-G930 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy S7 SM-G930 (7.0)</span></label></div> -->
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia XZ F8332  (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia XZ F8332  (7.0)</span></label></div>
 			<div class="form-row form-row-title">
