--- a/regression.html
+++ b/regression.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Randomization set of devices</title>
     <script src="js/jquery-3.2.1.min.js"></script>
-    <!--<link href="css/random.css" rel="stylesheet">-->
+    <link href="css/regressionTable.css" rel="stylesheet">
     <script src="js/iosRegression.js"></script>
     <!--<script src="js/script.js"></script>-->
 </head>
