--- a/regression.html
+++ b/regression.html
@@ -12,7 +12,8 @@
 
 <body>
     <div class="smallTable">Phone 6.x</div>
-    <div class="bigTable">Phone 6.x</div>
+    <div class="testArraySortTestersTime">Phone 6.x</div>
+    <div class="testArraySortTestersName">Phone 6.x</div>
 </body>
 
 </html>
