--- a/regression.html
+++ b/regression.html
@@ -7,13 +7,16 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <link href="css/regressionTable.css" rel="stylesheet">
     <script src="js/iosRegression.js"></script>
+    <script src="js/debugEstimate.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <!--<script src="js/script.js"></script>-->
 </head>
 
 <body>
-    <div class="smallTable">Phone 6.x</div>
+    <!--<div class="smallTable">Phone 6.x</div>
     <div class="testArraySortTestersTime">Phone 6.x</div>
-    <div class="testArraySortTestersName">Phone 6.x</div>
+    <div class="testArraySortTestersName">Phone 6.x</div>-->
+    <div id="donutchart" style="width: 900px; height: 500px;"></div>
 </body>
 
 </html>
