--- a/regression.html
+++ b/regression.html
@@ -13,10 +13,7 @@
 </head>
 
 <body>
-    <!--<div class="smallTable">Phone 6.x</div>
-    <div class="testArraySortTestersTime">Phone 6.x</div>
-    <div class="testArraySortTestersName">Phone 6.x</div>-->
-    <div id="donutchart" style="width: 900px; height: 500px;"></div>
+    <div class="smallTable">Phone 6.x</div>
 </body>
 
 </html>
