--- a/regression.html
+++ b/regression.html
@@ -4,16 +4,23 @@
 <head>
     <meta charset="utf-8">
     <title>Randomization set of devices</title>
-    <script src="js/jquery-3.2.1.min.js"></script>
     <link href="css/regressionTable.css" rel="stylesheet">
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/iosRegression.js"></script>
-    <script src="js/debugEstimate.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <!--<script src="js/script.js"></script>-->
+    <!--
+        <script src="js/script.js"></script>
+        <script src="js/debugEstimate.js"></script>
+    -->
 </head>
 
 <body>
-    <div class="smallTable">Phone 6.x</div>
+
+    <!--Div that will hold the pie chart-->
+    <div class="smallTable">smallTable</div>
+    </br>
+    <!--Div that will hold the pie chart-->
+    <div id="chart_div"></div>
 </body>
 
 </html>
