--- a/random.html
+++ b/random.html
@@ -27,20 +27,20 @@
         <form class="row">
             <div class="col33">
                 <fieldset>
-                    <h3>Phone [4.x/5.x OR 4.x/6.x OR 4.x/7.x]</h3>
+                    <h3>Phone [4.x/5+]</h3>
                     <div class="ApadLargeNewAndSmallOld">Phone 6.x</div>
                 </fieldset>
             </div>
             <div class="col33">
                 <fieldset>
-                    <h3>Pad [Set#1]</h3>
-                    <div class="ApadSmallNewAndLargeOld">Phone 7.x</div>
+                    <h3>Pad [4.x (&#62;10")/5+ (&#60;10")]</h3>
+                    <div class="ApadSmallNewAndLargeOld">Pad</div>
                 </fieldset>
             </div>
             <div class="col33">
                 <fieldset>
-                    <h3>Pad [Set#2]</h3>
-                    <div class="AphoneNewOld">Pad 6.x</div>
+                    <h3>Pad [4.x (&#60;10")/5+ (&#62;10")]</h3>
+                    <div class="AphoneNewOld">Pad</div>
                 </fieldset>
             </div>
         </form>
@@ -72,6 +72,10 @@
                 <fieldset>
                     <h3>Phone 7.x</h3>
                     <div class="listPhone7x">Phone 7.x</div>
+                </fieldset>
+                <fieldset>
+                    <h3>Phone 8.x</h3>
+                    <div class="listPhone8x">Phone 8.x</div>
                 </fieldset>
             </div>
             <div class="col25">
