--- a/random.html
+++ b/random.html
@@ -28,19 +28,19 @@
             <div class="col33">
                 <fieldset>
                     <h3>Phone [4.x/5+]</h3>
-                    <div class="ApadLargeNewAndSmallOld">Phone 6.x</div>
+                    <div class="ApadLargeNewAndSmallOld">Phone Set</div>
                 </fieldset>
             </div>
             <div class="col33">
                 <fieldset>
                     <h3>Pad [4.x (&#62;10")/5+ (&#60;10")]</h3>
-                    <div class="ApadSmallNewAndLargeOld">Pad</div>
+                    <div class="ApadSmallNewAndLargeOld">Pad Set#1</div>
                 </fieldset>
             </div>
             <div class="col33">
                 <fieldset>
                     <h3>Pad [4.x (&#60;10")/5+ (&#62;10")]</h3>
-                    <div class="AphoneNewOld">Pad</div>
+                    <div class="AphoneNewOld">Pad Set#2</div>
                 </fieldset>
             </div>
         </form>
