--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 				<strong>Apad 6.x</strong>
 			</div>
 			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Lenovo Tab 3 850M (6.0)"> <span class="checkbox-custom"></span> <span class="label">Lenovo Tab 3 850M (6.0)</span></label></div>			
+			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Tab A SM-T555 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Tab A SM-T555 (6.0.1)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Z2 Tablet (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Z2 Tablet (6.0.1)</span></label></div>
@@ -153,6 +155,10 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy Grand Prime Duos (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy Grand Prime Duos (5.1.1)</span></label></div>
 			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY J1 (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY J1  (5.1.1)</span></label></div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY J3 (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY J3  (5.1.1)</span></label></div>
+			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Xiaomi MI 4c (5.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi MI 4c (5.1)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Xiaomi Redmi 3 (5.1.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Redmi 3 (5.1.1)</span></label></div>
@@ -166,25 +172,31 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="LG G5 SE H845 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">LG G5 SE H845 (6.0.1)</span></label></div>
 			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="LG Nexus 5X White (6.0)"> <span class="checkbox-custom"></span> <span class="label">LG Nexus 5X White (6.0)</span></label></div>
+			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S5 mini (6.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S5 mini (6.0)</span></label></div>
 			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S6 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S6 (6.0.1)</span></label></div>				
+			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Z2 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Z2 (6.0.1)</span></label></div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Xiaomi Redmi Note 4 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Redmi Note 4 (6.0.1)</span></label></div>
 			<div class="form-row form-row-title">
 				<strong>Aphone 7.x</strong>
 			</div>
-			<!--<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy S7 SM-G930 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy S7 SM-G930 (7.0)</span></label></div> -->
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia XZ F8332  (7.0)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia XZ F8332  (7.0)</span></label></div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Xiaomi Mi5 (7.0)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi5 (7.0)</span></label></div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Xiaomi Mi A1 (7.1.2)"> <span class="checkbox-custom"></span> <span class="label">Xiaomi Mi A1 (7.1.2)</span></label></div>				
 			<div class="form-row form-row-title">
 				<strong>Aphone 8.x</strong>
 			</div>
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Huawei Nexus 6P (8.0)"> <span class="checkbox-custom"></span> <span class="label">Huawei Nexus 6P (8.0)</span></label></div>
 			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="LG Nexus 5X (8.0)"> <span class="checkbox-custom"></span> <span class="label">LG Nexus 5X (8.0)</span></label></div>
+				<label><input class="checkbox" type="checkbox" value="LG Nexus 5X Black (8.0)"> <span class="checkbox-custom"></span> <span class="label">LG Nexus 5X Black (8.0)</span></label></div>
 
 		</div>
 	</div>
