--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S5 mini (6.0)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S5 mini (6.0)</span></label></div>
 			<div class="form-row">
-				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S6 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S6 (6.0.1)</span></label></div>				
+				<label><input class="checkbox" type="checkbox" value="Samsung GALAXY S6 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung GALAXY S6 (6.0.1)</span></label></div>
+			<div class="form-row">
+				<label><input class="checkbox" type="checkbox" value="Samsung Galaxy A5 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Samsung Galaxy A5 (6.0.1)</span></label></div>				
 			<div class="form-row">
 				<label><input class="checkbox" type="checkbox" value="Sony Xperia Z2 (6.0.1)"> <span class="checkbox-custom"></span> <span class="label">Sony Xperia Z2 (6.0.1)</span></label></div>
 			<div class="form-row">
