--- a/oldDevices.html
+++ b/oldDevices.html
@@ -23,7 +23,7 @@
 				Android
 		</div>
 		<div class="navbar-logo-ios">
-				<a href="index.html">iOS</a>
+				<a href="oldDevices.html">iOS</a>
 		</div> -->
 	</nav>
 	<div data-columns="" id="grid">
