--- a/random.html
+++ b/random.html
@@ -20,7 +20,7 @@
     </div>
     <article>
         <p class="arrows">
-            <a href="index.html" id="prev" class="btn leftArrow" ><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>
+            <a href="oldDevices.html" id="prev" class="btn leftArrow" ><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>
             <a href="#" id="prev" class="btn play" onclick="randomEverything()"><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>
             <a href="#" id="next" class="btn close" onclick="clearCheckbox()"><span><span class="s1"></span><span class="s2"></span><span class="s3"></span></span></a>
         </p>
