--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
                     Снять выбор
                 </button>
             </td>
+            <td>
+                <a href="yandextaxi://coopaccount?type=family&screen=payment_method">
+                    <button class="button">
+                        family
+                    </button>
+                </a>
+                <a href="yandextaxi://coopaccount?type=business&screen=payment_method">
+                    <button class="button">
+                        business
+                    </button>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
