--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ресурсы для разработки и тестирования</title>
+    <title>Ресурсы из доклада "Три по цене одного, или как в Яндекс ID автотесты перепридумали"</title>
     <style>
         :root {
             --primary-color: #3498db;
@@ -248,11 +248,11 @@
             <div class="card testplane">
                 <div class="card-header">
                     <div class="card-icon"><i class="fas fa-plane"></i></div>
-                    <div>TestPlane</div>
+                    <div>Testplane</div>
                 </div>
                 <div class="card-body">
                     <div class="card-description">
-                        <p>Платформа для управления тестированием и автоматизации в разработке. TestPlane предоставляет набор инструментов для эффективного управления тестами и их результатами.</p>
+                        <p>Платформа для управления тестированием и автоматизации в разработке. Testplane предоставляет набор инструментов для эффективного управления тестами и их результатами.</p>
                     </div>
                     <div class="card-links">
                         <a href="https://testplane.io/" class="btn btn-docs" target="_blank">
@@ -265,7 +265,7 @@
             <div class="card testplane-resources">
                 <div class="card-header">
                     <div class="card-icon"><i class="fas fa-info-circle"></i></div>
-                    <div>Про TestPlane</div>
+                    <div>Про Testplane</div>
                 </div>
                 <div class="card-body">
                     <div class="card-description">
@@ -318,7 +318,7 @@
         </div>
         
         <footer>
-            <p>© 2024 • Создано с любовью к веб-разработке и тестированию</p>
+            <p>© 2025 • Создано с любовью к веб-разработке и тестированию</p>
         </footer>
     </div>
 </body>
